# NoiseMapGL

./: CMakeLists.txt  README.md
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Camera.cpp  MeshGenerator.cpp  Terrain.cpp  gl.c  main.cpp  shader.cpp
src/include/: Camera.h  MathTypes.h  MeshGenerator.h  PerlinHelpers.h  Terrain.h  shader.h
src/include/glad/: gl.h
